# qqbot

./: .env.prod  README.md  bot.py  pyproject.toml
qqbot_1/plugins/ELFChatBot/: __init__.py
qqbot_1/plugins/ELFChatBot/ChatBotApi/: baiduBot.py
qqbot_1/plugins/aetu/: .__init__.py.swp  __init__.py
